--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  pentaho_data:
 services:
   pen-server:
     build: .
@@ -7,16 +9,13 @@ services:
     networks:
       - rede_pentaho
     restart: always
-    ports:
-      - "8081:8080"
     volumes:
-      - ./data/hsqldb:/opt/pentaho/pentaho-server/data/hsqldb:rw #Schedule/Quartz/hibernate
-      - ./data/jackrabbit-repository:/opt/pentaho/pentaho-server/pentaho-solutions/system/jackrabbit/repository:rw #login, bancos, JOB, TR
-      - ./logs:/opt/pentaho/pentaho-server/tomcat/logs
+      - pentaho_data:/opt/pentaho/pentaho-server
+    ports:
+      - "8080:8080"
     environment:
       - COMPOSE_CONVERT_WINDOWS_PATHS=1 #windows only
       - TZ=America/Sao_Paulo
 networks:
   rede_pentaho:
-    external:
       name: network_pentaho
